public class Payment {
    /*- pricePerHour: double
- zone: List<Parking>

+pricePerDay()
+pricePerEvening()
+pricePerNight()
+startPayment()
+endPayment()
*/

}
