public class PrivateArea extends Parking {
}
